--- a/visa.html
+++ b/visa.html
@@ -61,8 +61,8 @@
      </style>
 
      <!--Favicon-->
-     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-     <link rel="icon" href="images/favicon.png" type="image/x-icon">
+     <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
      <!-- Responsive -->
      <meta http-equiv="X-UA-Compatible" content="IE=edge">
      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -187,7 +187,7 @@
 
                              <div class="navbar-collapse collapse clearfix">
                                  <ul class="navigation clearfix">
-                                     <li><a href="index.html">Home</a></li>
+                                     <!-- <li><a href="index.html">Home</a></li> -->
                                      <li class="current dropdown"><a href="about.html">About</a>
                                          <ul>
                                              <li><a href="sponsors.html">Sponsors & Exhibitors</a></li>
@@ -225,7 +225,12 @@
                                      </li>
                                      <li><a href="special_sessions.html">Special Sessions</a></li>
 
-                                     <li><a href="itrack.html">Industry Track</a></li>
+                                     <li class="current dropdown"><a href="#">Tracks</a>
+                                         <ul>
+                                             <li><a href="itrack.html">Special Industrial Track (SIT)</a></li>
+                                             <li><a href="htrack.html">Humanitarian Activities Track</a></li>
+                                         </ul>
+                                     </li>
                                      <li><a href="reg.html">Registration</a></li>
 
                                      <li><a href="contact.html">Contact Us</a></li>
@@ -242,123 +247,151 @@
 
          <section class="services-style-one">
              <div class="container">
-                 <div class="sec-title text-left">
-                     <h2>Visa Information</h2><br>
+                 <div class="row">
+                     <div class="col-md-10">
+                         <div class="sec-title text-left">
+                             <h2>Visa Information</h2><br>
 
-                     <p>
-                         <font color="#ffda15">ALL FOREIGN ATTENDEES ARE REQUIRED TO APPLY FOR A CONFERENCE VISA</font>
+                             <p>
+                                 <font color="#ffda15">ALL FOREIGN ATTENDEES ARE REQUIRED TO APPLY FOR A CONFERENCE VISA
+                                 </font>
+                                 <br><br>
+                                 <h3>Requirements for Visa Application for All Applicants:</h3><br>
+                                 <p>Generally the following documents are required for obtaining Indian Visa. However,
+                                     the requirement may vary from country to country.<br>
+                                     <ul style="margin-left: 12px;">
+                                         <li>- Original passport valid for at least 6 months</li>
+                                         <li>- Visa fee</li>
+                                         <li>- Two passport size photographs</li>
+                                         <li>- Supporting documents, where necessary <br></li>
+                                     </ul>
 
-                         <h3>Requirements for Visa Application for All Applicants:</h3>
-                         <p>Generally the following documents are required for obtaining Indian Visa. However, the
-                             requirement may vary from country to country.<br>
-                             <br>
-                             Original passport valid for at least 6 months<br>
-                             Visa fee<br>
-                             Two passport size photographs<br>
-                             Supporting documents, where necessary <br><br>
 
-                             Please follow the instructions below to apply for your VISA to attend IEEE TENCON
-                             2019.<br><br>
+                                     Please follow the instructions below to apply for your VISA to attend IEEE TENCON
+                                     2019.<br><br>
 
-                             Type of Visa: Conference Visa<br>
-                             Period: For the duration of the conference or seminar<br><br>
+                                     Type of Visa: Conference Visa<br>
+                                     Period: For the duration of the conference or seminar<br><br>
 
-                             Foreign passengers should ensure that they are in possession of valid Indian Visa before
-                             they start their
-                             journey to India except nationals of Nepal and Bhutan who do not require visa to enter
-                             India and nationals of
-                             Maldives who do not require visa for entry in India for a period up to 90 days (a separate
-                             Visa regime exists
-                             for diplomatic/official passport holders).<br><br>
+                                     Foreign passengers should ensure that they are in possession of valid Indian Visa
+                                     before
+                                     they start their
+                                     journey to India except nationals of Nepal and Bhutan who do not require visa to
+                                     enter
+                                     India and nationals of
+                                     Maldives who do not require visa for entry in India for a period up to 90 days (a
+                                     separate
+                                     Visa regime exists
+                                     for diplomatic/official passport holders).<br><br>
 
-                             The Consular Passport and Visa (CPV) Division of the Ministry of External Affairs is
-                             responsible for issuance
-                             of Indian visas to the foreign nationals for their visit for various purposes. This
-                             facility is granted through
-                             various Indian missions abroad.<br><br>
+                                     The Consular Passport and Visa (CPV) Division of the Ministry of External Affairs
+                                     is
+                                     responsible for issuance
+                                     of Indian visas to the foreign nationals for their visit for various purposes. This
+                                     facility is granted through
+                                     various Indian missions abroad.<br><br>
 
-                             Visa fees are non-refundable and subject to change without notice. The High Commission
-                             reserves the right on
-                             granting and deciding type/duration of visa irrespective of the fees tendered at the time
-                             of making
-                             application. Granting of Visa does not confer the right of entry to India and is subject to
-                             the discretion of
-                             the Immigration Authorities.<br><br>
+                                     Visa fees are non-refundable and subject to change without notice. The High
+                                     Commission
+                                     reserves the right on
+                                     granting and deciding type/duration of visa irrespective of the fees tendered at
+                                     the time
+                                     of making
+                                     application. Granting of Visa does not confer the right of entry to India and is
+                                     subject to
+                                     the discretion of
+                                     the Immigration Authorities.<br><br>
+                                     <hr>
 
-                             <h3>Visa Application Form:</h3>
-                             The Visa application form is available at the Indian Embassy office in your country.<br>
-                             <br>
+                                     <h3>Visa Application Form:</h3>
+                                     The Visa application form is available at the Indian Embassy office in your
+                                     country.<br>
+                                     <br>
+                                     <hr>
 
-                             <h3>Procedure for Obtaining Visa:</h3>
-                             Visas can be applied for in person or by post at the High Commission of India based in the
-                             country from where the candidate intends to depart for India. You may also apply online at:
-                             <a class="url"
-                                 href="https://indianvisaonline.gov.in/visa/#">https://indianvisaonline.gov.in/visa/#</a>
-                             and click on regular visa application. You will then fill up the required details and once
-                             you go to Visa category there you have multiple options of visa application on the same you
-                             will get Conference Visa option. Please select the conference Visa.<br><br>
+                                     <h3>Procedure for Obtaining Visa:</h3>
+                                     Visas can be applied for in person or by post at the High Commission of India based
+                                     in the
+                                     country from where the candidate intends to depart for India. You may also apply
+                                     online at:
+                                     <a class="url"
+                                         href="https://indianvisaonline.gov.in/visa/#">https://indianvisaonline.gov.in/visa/#</a>
+                                     and click on regular visa application. You will then fill up the required details
+                                     and once
+                                     you go to Visa category there you have multiple options of visa application on the
+                                     same you
+                                     will get Conference Visa option. Please select the conference Visa.<br><br>
 
-                             Traveling from the USA? Click below to follow the VISA application process.<br><br>
-                             <br>
-                             <p align="center">
-                                 <strong><a class="btn btn-warning btn-block"
-                                         href="files/VISA_Guidelines_application_Information.pdf">VISA Application
-                                         Process</a></strong><br><strong>
-                                     <a class="btn btn-warning" href="files/visa-application-sample-form.pdf">Sample
-                                         Application</a><br></strong>
-                             </p>
-                             <br>
+                                     Traveling from the USA? Click below to follow the VISA application process.<br><br>
 
-                             <h3>Traveling with your significant other or family?</h3>
+                                     <div class="row">
+                                         <div class="col-md-6"><a class="btn btn-warning btn-block"
+                                                 href="files/VISA_Guidelines_application_Information.pdf">VISA
+                                                 Application Process</a></div>
 
-                             If your Spouse is registered to attend the conference along with you, then she/he must also
-                             apply for a
-                             Conference Visa.<br>
+                                         <div class="col-md-6"><a class="btn btn-warning"
+                                                 href="files/visa-application-sample-form.pdf">Sample
+                                                 Application</a></div>
+                                     </div>
 
-                             If your Spouse is NOT attending the conference, she/he must apply for a Tourist Visa.
-                             Please click <a class="url"
-                                 href="http://www.in.ckgs.us/visa/tourist-visa">http://www.in.ckgs.us/visa/tourist-visa</a>
-                             for Tourist
-                             Visa.<br>
 
-                             If your Minor children are accompanying you on your visit to India, they must apply for a
-                             Tourist Visa. Please
-                             click <a class="url"
-                                 href="http://www.in.ckgs.us/visa/tourist-visa">http://www.in.ckgs.us/visa/tourist-visa</a>
-                             for Tourist Visa.<br><br>
+                                     <br>
+                                     <hr>
 
-                             <h3>Visa Assistance Letters</h3>
+                                     <h3>Traveling with your significant other or family?</h3><br>
+                                     <ul>
+                                         <li>- If your Spouse is registered to attend the conference along with you,
+                                             then she/he must also apply for a Conference Visa.</li>
+                                         <li>- If your Spouse is NOT attending the conference, she/he must apply for a
+                                             Tourist Visa. Please click <a class="url"
+                                                 href="http://www.in.ckgs.us/visa/tourist-visa">http://www.in.ckgs.us/visa/tourist-visa</a>
+                                             for Tourist Visa.</li>
+                                         <li>- If your Minor children are accompanying you on your visit to India, they
+                                             must apply for a Tourist Visa. Please click <a class="url"
+                                                 href="http://www.in.ckgs.us/visa/tourist-visa">http://www.in.ckgs.us/visa/tourist-visa</a>
+                                             for Tourist Visa.</li><br>
+                                     </ul>
+                                     <hr>
+                                     <h3>Visa Assistance Letters</h3>
 
-                             If the respective embassy requires the invitation letter, please contact the Conference
-                             Secretariat @ <a class="url"
-                                 href="mailto:secretariat@tencon2019.org">secretariat@tencon2019.org</a>. Please provide
-                             your full
-                             name as in the passport, valid registration receipt number, and the paper id if you have
-                             the paper with IEEE-
-                             TENCON 2019).
+                                     If the respective embassy requires the invitation letter, please contact the
+                                     Conference
+                                     Secretariat @ <a class="url"
+                                         href="mailto:secretariat@tencon2019.org">secretariat@tencon2019.org</a>. Please
+                                     provide
+                                     your full
+                                     name as in the passport, valid registration receipt number, and the paper id if you
+                                     have
+                                     the paper with IEEE-
+                                     TENCON 2019).
 
-                             All VISA letters will be processed within 24 hours of your completed registration and
-                             delivered to the email
-                             you have registered with. <br><br>
+                                     All VISA letters will be processed within 24 hours of your completed registration
+                                     and
+                                     delivered to the email
+                                     you have registered with. <br><br>
 
-                             Some embassy might require the letter from the Indian Government approving the Conference.
-                             Please click below
-                             links to download approval letters from Ministry of Home Affairs and Ministry of External
-                             Affairs:<br><br>
+                                     Some embassy might require the letter from the Indian Government approving the
+                                     Conference.
+                                     Please click below
+                                     links to download approval letters from Ministry of Home Affairs and Ministry of
+                                     External
+                                     Affairs:<br><br>
 
-                             Security Clearance : <a class="url" href="MHA_Clearance - Tencon 2019.pdf">MHA</a><br>
+                                     Security Clearance : <a class="url"
+                                         href="MHA_Clearance - Tencon 2019.pdf">MHA</a><br>
 
-                             Political Clearance: <a class="url" href="MEA_Clearance(I).pdf">MEA(I)</a>, <a class="url"
-                                 href="MEA_Clearance(II).pdf"> MEA(II)</a><br>
+                                     Political Clearance: <a class="url" href="MEA_Clearance(I).pdf">MEA(I)</a>, <a
+                                         class="url" href="MEA_Clearance(II).pdf"> MEA(II)</a><br>
 
-                             Clearance from MHRD: <a class="url" href="Nodal_Ministry - Tencon 2019.pdf">Nodal
-                                 Ministry</a><br><br>
+                                     Clearance from MHRD: <a class="url" href="Nodal_Ministry - Tencon 2019.pdf">Nodal
+                                         Ministry</a><br><br>
+
+                         </div>
+                     </div>
 
                  </div>
              </div>
-
      </div>
-
 
 
 
