change color schemes of track pages

--- a/htrack.html
+++ b/htrack.html
@@ -224,28 +224,28 @@
        
                     <br>
                     <h3>Track Organizers:</h3><br>
-                    <font color="red">&#10020;&nbsp;&nbsp;&nbsp;&nbsp;</font><b>Amarnath Raja</b>, <i>Past Chair IEEE HAHC,</i>
+                    <font color="#81246a">&#10020;&nbsp;&nbsp;&nbsp;&nbsp;</font><b>Amarnath Raja</b>, <i>Past Chair IEEE HAHC,</i>
                     <a class="url" href="mailto:a.raja@ieee.org">(a.raja@ieee.org)</a><br>
-                    <font color="red">&#10020;&nbsp;&nbsp;&nbsp;&nbsp;</font><b>Satish Babu</b>, <i>Member IEEE HAC, </i><a
+                    <font color="#81246a">&#10020;&nbsp;&nbsp;&nbsp;&nbsp;</font><b>Satish Babu</b>, <i>Member IEEE HAC, </i><a
                       class="url" href="mailto:sbabu@ieee.org"> (sbabu@ieee.org)</a><br>
-                    <font color="red">&#10020;&nbsp;&nbsp;&nbsp;&nbsp;</font><b>VK Damodaran</b>, <i>Life Senior Member IEEE,
+                    <font color="#81246a">&#10020;&nbsp;&nbsp;&nbsp;&nbsp;</font><b>VK Damodaran</b>, <i>Life Senior Member IEEE,
                     </i><a class="url" href="mailto:vkd@ieee.org"> (vkd@ieee.org)</a><br>
-                    <font color="red">&#10020;&nbsp;&nbsp;&nbsp;&nbsp;</font><b>Akila Surendran</b>, <i>Senior Engineer
+                    <font color="#81246a">&#10020;&nbsp;&nbsp;&nbsp;&nbsp;</font><b>Akila Surendran</b>, <i>Senior Engineer
                       (Assistive Technology), NISH, </i><a class="url" href="mailto:akilas@nish.ac.in">
                       (akilas@nish.ac.in)</a><br>
                     <br>   
 
              <p>Who should attend:<br>
 
-               <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Technologists
+               <font color="#fe9079">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Technologists
                <br>
-               <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Practitioners
+               <font color="#fe9079">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Practitioners
                <br>
-               <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Students
+               <font color="#fe9079">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Students
                <br>
-               <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Young Professionals
+               <font color="#fe9079">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Young Professionals
                <br>
-               <font color="green">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Anybody interested in Humanitarian Work
+               <font color="#fe9079">&#10004;&nbsp;&nbsp;&nbsp;&nbsp;</font>Anybody interested in Humanitarian Work
              </p>
              <br>
 
@@ -259,20 +259,20 @@
 
              <table class="table" cellspacing="2" cellpadding="2" width="95%">
                <tr>
-                 <td width="16%" bgcolor="#B4C85E"><b>Session</b></td>
-                 <td width="79%" bgcolor="#E0F196">SS20: User-centric Assistive Technology</td>
+                 <td width="16%" bgcolor="#ffaa5f"><b>Session</b></td>
+                 <td width="79%" bgcolor="#ffdf7a">SS20: User-centric Assistive Technology</td>
                </tr>
                <tr>
-                 <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                 <td bgcolor="#E0F196">Sunday &#8211; October 20, 2019 / 08:30 to 09:30 hrs </td>
+                 <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                 <td bgcolor="#ffdf7a">Sunday &#8211; October 20, 2019 / 08:30 to 09:30 hrs </td>
                </tr>
                <tr>
-                 <td bgcolor="#B4C85E"><b>Room</b></td>
-                 <td bgcolor="#E0F196">Grand Ballroom 1, Grand Hyatt</td>
+                 <td bgcolor="#ffaa5f"><b>Room</b></td>
+                 <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
                </tr>
                <tr>
-                 <td bgcolor="#B4C85E"><b>Chair</b></td>
-                 <td bgcolor="#E0F196">TBA</td>
+                 <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                 <td bgcolor="#ffdf7a">TBA</td>
                </tr>
              </table>
 
@@ -310,28 +310,28 @@
 
 
                <tr>
-                 <td width="16%" bgcolor="#40FF00">Keynote address</td>
-                 <td width="16%" bgcolor="#40FF00"><b>09:30 to 10:00</b></td>
-                 <td width="79%" bgcolor="#40FF00"><b>Open-source tools to make STEM materials accessible for learners
+                 <td width="16%" bgcolor="#f6cef5">Keynote address</td>
+                 <td width="16%" bgcolor="#fde8fb"><b>09:30 to 10:00</b></td>
+                 <td width="79%" bgcolor="#fde8fb"><b>Open-source tools to make STEM materials accessible for learners
                      with visual impairment</b><br>Prof Volker Sorge, <i>University of Birmingham</i></td>
                </tr>
                <table class="table" cellspacing="2" cellpadding="2" width="95%">
                  <tr>
-                   <td width="16%" bgcolor="#B4C85E"><b>Session</b></td>
-                   <td width="79%" bgcolor="#E0F196">Panel Discussion: Making science accessible to students with
+                   <td width="16%" bgcolor="#ffaa5f"><b>Session</b></td>
+                   <td width="79%" bgcolor="#ffdf7a">Panel Discussion: Making science accessible to students with
                      disabilities</td>
                  </tr>
                  <tr>
-                   <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                   <td bgcolor="#E0F196">Sunday &#8211; October 20, 2019 / 10:00 to 10:45 hrs </td>
+                   <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                   <td bgcolor="#ffdf7a">Sunday &#8211; October 20, 2019 / 10:00 to 10:45 hrs </td>
                  </tr>
                  <tr>
-                   <td bgcolor="#B4C85E"><b>Room</b></td>
-                   <td bgcolor="#E0F196">Grand Ballroom 1, Grand Hyatt</td>
+                   <td bgcolor="#ffaa5f"><b>Room</b></td>
+                   <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
                  </tr>
                  <tr>
-                   <td bgcolor="#B4C85E"><b>Chair</b></td>
-                   <td bgcolor="#E0F196">TBA</td>
+                   <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                   <td bgcolor="#ffdf7a">TBA</td>
                  </tr>
                </table>
                <table class="table" cellspacing="2" cellpadding="2" width="95%">
@@ -356,19 +356,19 @@
                    <td width="79%" bgcolor="#FFFFFF">Dr KG Satheesh Kumar, <i>NISH</i></td>
                  </tr>
                  <tr>
-                   <td width="16%" bgcolor="#b4b4b4"></td>
-                   <td width="16%" bgcolor="#b4b4b4"></td>
-                   <td width="79%" bgcolor="#b4b4b4">Tea Break</td>
+                   <td width="16%" bgcolor="#f3f3f3"></td>
+                   <td width="16%" bgcolor="#f3f3f3"></td>
+                   <td width="79%" bgcolor="#f3f3f3">Tea Break</td>
                  </tr>
                  <tr>
-                   <td width="16%" bgcolor="#B4C85E"></td>
-                   <td width="16%" bgcolor="#B4C85E"><b>11:00 to 12:30</b></td>
-                   <td width="79%" bgcolor="#B4C85E">Conference Wide Plenary</td>
+                   <td width="16%" bgcolor="#ffaa5f"></td>
+                   <td width="16%" bgcolor="#ffaa5f"><b>11:00 to 12:30</b></td>
+                   <td width="79%" bgcolor="#ffaa5f">Conference Wide Plenary</td>
                  </tr>
                  <tr>
-                   <td width="16%" bgcolor="#b4b4b4"></td>
-                   <td width="16%" bgcolor="#b4b4b4"><b>12:30 to 01:30</b></td>
-                   <td width="79%" bgcolor="#b4b4b4">Lunch</td>
+                   <td width="16%" bgcolor="#f3f3f3"></td>
+                   <td width="16%" bgcolor="#f3f3f3"><b>12:30 to 01:30</b></td>
+                   <td width="79%" bgcolor="#f3f3f3">Lunch</td>
                  </tr>
                </table>
 
@@ -376,28 +376,28 @@
 
                <table class="table" cellspacing="2" cellpadding="2" width="95%">
                  <tr>
-                   <td width="16%" bgcolor="#40FF00"><b></b></td>
-                   <td width="16%" bgcolor="#40FF00"><b>13:30 to 14:00</b></td>
-                   <td width="79%" bgcolor="#40FF00"><b>Presentation on Social Return On Investment on the Techno-Unnati
+                   <td width="16%" bgcolor="#f6cef5"><b></b></td>
+                   <td width="16%" bgcolor="#f6cef5"><b>13:30 to 14:00</b></td>
+                   <td width="79%" bgcolor="#fde8fb"><b>Presentation on Social Return On Investment on the Techno-Unnati
                        Project</b><br>SROI Team, <i>Kerala Section</i></td>
                  </tr>
                  <table class="table" cellspacing="2" cellpadding="2" width="95%">
                    <tr>
-                     <td width="16%" bgcolor="#B4C85E"><b>Session</b></td>
-                     <td width="79%" bgcolor="#E0F196">Panel Discussion: Disaster management: The Role of Technology
+                     <td width="16%" bgcolor="#ffaa5f"><b>Session</b></td>
+                     <td width="79%" bgcolor="#ffdf7a">Panel Discussion: Disaster management: The Role of Technology
                      </td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                     <td bgcolor="#E0F196">Sunday &#8211; October 20, 2019 / 14:00 to 16:00 hrs </td>
+                     <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                     <td bgcolor="#ffdf7a">Sunday &#8211; October 20, 2019 / 14:00 to 16:00 hrs </td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Room</b></td>
-                     <td bgcolor="#E0F196">Grand Ballroom 1, Grand Hyatt</td>
+                     <td bgcolor="#ffaa5f"><b>Room</b></td>
+                     <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Chair</b></td>
-                     <td bgcolor="#E0F196">TBA</td>
+                     <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                     <td bgcolor="#ffdf7a">TBA</td>
                    </tr>
                  </table>
                  <table class="table" cellspacing="2" cellpadding="2" width="95%">
@@ -445,9 +445,9 @@
                    </tr>
 
                    <tr>
-                     <td width="16%" bgcolor="#b4b4b4"></td>
-                     <td width="16%" bgcolor="#b4b4b4"><b>04:00 to 04:15</b></td>
-                     <td width="79%" bgcolor="#b4b4b4">Tea Break</td>
+                     <td width="16%" bgcolor="#f3f3f3"></td>
+                     <td width="16%" bgcolor="#f3f3f3"><b>04:00 to 04:15</b></td>
+                     <td width="79%" bgcolor="#f3f3f3">Tea Break</td>
                    </tr>
 
                  </table>
@@ -455,21 +455,21 @@
 
                  <table class="table" cellspacing="2" cellpadding="2" width="95%">
                    <tr>
-                     <td width="16%" bgcolor="#B4C85E"><b>Session</b></td>
-                     <td width="79%" bgcolor="#E0F196">Panel Discussion: R10 Humanitarian Activities, and HAC & SIGHT
+                     <td width="16%" bgcolor="#ffaa5f"><b>Session</b></td>
+                     <td width="79%" bgcolor="#ffdf7a">Panel Discussion: R10 Humanitarian Activities, and HAC & SIGHT
                        Opportunities</td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                     <td bgcolor="#E0F196">Sunday &#8211; October 20, 2019 / 16:15 to 16:45 hrs </td>
+                     <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                     <td bgcolor="#ffdf7a">Sunday &#8211; October 20, 2019 / 16:15 to 16:45 hrs </td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Room</b></td>
-                     <td bgcolor="#E0F196">Grand Ballroom 1, Grand Hyatt</td>
+                     <td bgcolor="#ffaa5f"><b>Room</b></td>
+                     <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Chair</b></td>
-                     <td bgcolor="#E0F196">Amarnath Raja, Founding Chair R10 HTC </td>
+                     <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                     <td bgcolor="#ffdf7a">Amarnath Raja, Founding Chair R10 HTC </td>
                    </tr>
                  </table>
 
@@ -504,20 +504,20 @@
 
                  <table class="table" cellspacing="2" cellpadding="2" width="95%">
                    <tr>
-                     <td width="16%" bgcolor="#B4C85E"><b>Session</b></td>
-                     <td width="79%" bgcolor="#E0F196">SS24: Humanitarian Technologies for Sustainable Development</td>
+                     <td width="16%" bgcolor="#ffaa5f"><b>Session</b></td>
+                     <td width="79%" bgcolor="#ffdf7a">SS24: Humanitarian Technologies for Sustainable Development</td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                     <td bgcolor="#E0F196">Sunday &#8211; October 20, 2019 / 16:45 to 18:00 hrs </td>
+                     <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                     <td bgcolor="#ffdf7a">Sunday &#8211; October 20, 2019 / 16:45 to 18:00 hrs </td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Room</b></td>
-                     <td bgcolor="#E0F196">Grand Ballroom 1, Grand Hyatt</td>
+                     <td bgcolor="#ffaa5f"><b>Room</b></td>
+                     <td bgcolor="#ffdf7a">Grand Ballroom 1, Grand Hyatt</td>
                    </tr>
                    <tr>
-                     <td bgcolor="#B4C85E"><b>Chair</b></td>
-                     <td bgcolor="#E0F196">TBA</td>
+                     <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                     <td bgcolor="#ffdf7a">TBA</td>
                    </tr>
                  </table>
 
