--- a/itrack.html
+++ b/itrack.html
@@ -310,20 +310,20 @@
           <div class="col-md-10">
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
               <tr>
-                <td width="16%" bgcolor="#B4C85E"><b>Session</b></td>
-                <td width="79%" bgcolor="#E0F196">Keynote Session </td>
+                <td width="16%" bgcolor="#ffaa5f"><b>Session</b></td>
+                <td width="79%" bgcolor="#ffdf7a">Keynote Session </td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                <td bgcolor="#E0F196">Saturday &#8211; October 19, 2019 / 08:30 to 09:30 hrs </td>
+                <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                <td bgcolor="#ffdf7a">Saturday &#8211; October 19, 2019 / 08:30 to 09:30 hrs </td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Room</b></td>
-                <td bgcolor="#E0F196">TBA</td>
+                <td bgcolor="#ffaa5f"><b>Room</b></td>
+                <td bgcolor="#ffdf7a">TBA</td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Chair</b></td>
-                <td bgcolor="#E0F196"><a class="url" href="chrislee.html" target="_blank">Dr. Chris Gwo Giun Lee,
+                <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                <td bgcolor="#ffdf7a"><a class="url" href="chrislee.html" target="_blank">Dr. Chris Gwo Giun Lee,
                     <i>PProfessor, Cheng Kung Univ, R. O. C.</i></a></td>
               </tr>
             </table>
@@ -344,20 +344,20 @@
             </table>
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
               <tr>
-                <td width="16%" bgcolor="#B4C85E"><b>Session </b></td>
-                <td width="79%" bgcolor="#E0F196">1</td>
+                <td width="16%" bgcolor="#ffaa5f"><b>Session </b></td>
+                <td width="79%" bgcolor="#ffdf7a">1</td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                <td bgcolor="#E0F196">Saturday &#8211; October 19, 2019 / 09:30 to 10:30 hrs </td>
+                <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                <td bgcolor="#ffdf7a">Saturday &#8211; October 19, 2019 / 09:30 to 10:30 hrs </td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Room</b></td>
-                <td bgcolor="#E0F196">TBA</td>
+                <td bgcolor="#ffaa5f"><b>Room</b></td>
+                <td bgcolor="#ffdf7a">TBA</td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Chair</b></td>
-                <td bgcolor="#E0F196">Dr. Nirmal Nair, <i>Associate Professor, University of Auckland</i></a></td>
+                <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                <td bgcolor="#ffdf7a">Dr. Nirmal Nair, <i>Associate Professor, University of Auckland</i></a></td>
               </tr>
             </table>
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
@@ -386,9 +386,9 @@
          </tr> -->
 
               <tr>
-                <td width="16%" bgcolor="#b4b4b4"></td>
-                <td width="16%" bgcolor="#b4b4b4"><b>10:30 to 11:00</b></td>
-                <td width="79%" bgcolor="#b4b4b4"><a class="url" href="#">Tea/Coffee Break</a></td>
+                <td width="16%" bgcolor="#f3f3f3"></td>
+                <td width="16%" bgcolor="#f3f3f3"><b>10:30 to 11:00</b></td>
+                <td width="79%" bgcolor="#f3f3f3"><a class="url" href="#">Tea/Coffee Break</a></td>
               </tr>
 
               <tr>
@@ -399,41 +399,41 @@
 
 
               <tr>
-                <td width="16%" bgcolor="#40FF00">Plenary I</td>
-                <td width="16%" bgcolor="#40FF00"><b>11:00 to 11:45</b></td>
-                <td width="79%" bgcolor="#40FF00">Prof. Jong-Hwan Kim, <i>KT Endowed Chair Professor, KAIST Korea</i>
+                <td width="16%" bgcolor="#F6CEF5">Plenary I</td>
+                <td width="16%" bgcolor="#F6CEF5"><b>11:00 to 11:45</b></td>
+                <td width="79%" bgcolor="#F6CEF5">Prof. Jong-Hwan Kim, <i>KT Endowed Chair Professor, KAIST Korea</i>
                 </td>
               </tr>
 
               <tr>
-                <td width="16%" bgcolor="#40FF00">Plenary II</td>
-                <td width="16%" bgcolor="#40FF00"><b>11:45 to 12:30</b></td>
-                <td width="79%" bgcolor="#40FF00">Nissan Digital ( TBD )</td>
+                <td width="16%" bgcolor="#F6CEF5">Plenary II</td>
+                <td width="16%" bgcolor="#F6CEF5"><b>11:45 to 12:30</b></td>
+                <td width="79%" bgcolor="#F6CEF5">Nissan Digital ( TBD )</td>
               </tr>
 
               <tr>
-                <td width="16%" bgcolor="#b4b4b4"></td>
-                <td width="16%" bgcolor="#b4b4b4"><b>12:30 to 14:00</b></td>
-                <td width="79%" bgcolor="#b4b4b4">Lunch Break and Networking</td>
+                <td width="16%" bgcolor="#f3f3f3"></td>
+                <td width="16%" bgcolor="#f3f3f3"><b>12:30 to 14:00</b></td>
+                <td width="79%" bgcolor="#f3f3f3">Lunch Break and Networking</td>
               </tr>
             </table>
 
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
               <tr>
-                <td width="16%" bgcolor="#B4C85E"><b>Session:2</b></td>
-                <td width="79%" bgcolor="#E0F196">e-Mobility</td>
+                <td width="16%" bgcolor="#ffaa5f"><b>Session:2</b></td>
+                <td width="79%" bgcolor="#ffdf7a">e-Mobility</td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                <td bgcolor="#E0F196">Saturday &#8211; October 19, 2019 / 14:00 to 15:45 hrs </td>
+                <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                <td bgcolor="#ffdf7a">Saturday &#8211; October 19, 2019 / 14:00 to 15:45 hrs </td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Room</b></td>
-                <td bgcolor="#E0F196">TBA</td>
+                <td bgcolor="#ffaa5f"><b>Room</b></td>
+                <td bgcolor="#ffdf7a">TBA</td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Chair</b></td>
-                <td bgcolor="#E0F196">Harish, Mysore</td>
+                <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                <td bgcolor="#ffdf7a">Harish, Mysore</td>
               </tr>
             </table>
 
@@ -460,9 +460,9 @@
               </tr>
 
               <tr>
-                <td width="16%" bgcolor="#b4b4b4"></td>
-                <td width="16%" bgcolor="#b4b4b4"><b>15:45 to 16:00</b></td>
-                <td width="79%" bgcolor="#b4b4b4"><a class="url" href="#">Tea/Coffee Break</a></td>
+                <td width="16%" bgcolor="#f3f3f3"></td>
+                <td width="16%" bgcolor="#f3f3f3"><b>15:45 to 16:00</b></td>
+                <td width="79%" bgcolor="#f3f3f3"><a class="url" href="#">Tea/Coffee Break</a></td>
               </tr>
 
               <!--   <tr>
@@ -474,21 +474,21 @@
 
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
               <tr>
-                <td width="16%" bgcolor="#B4C85E"><b>Session: 3</b></td>
-                <td width="79%" bgcolor="#E0F196"><a class="url" href="nissan.html" target="_blank">Cyber Security,
+                <td width="16%" bgcolor="#ffaa5f"><b>Session: 3</b></td>
+                <td width="79%" bgcolor="#ffdf7a"><a class="url" href="nissan.html" target="_blank">Cyber Security,
                     (Managed by Nissan Digital)</a></td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                <td bgcolor="#E0F196">Saturday &#8211; October 19, 2019 / 16:00 to 17:00 hrs </td>
+                <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                <td bgcolor="#ffdf7a">Saturday &#8211; October 19, 2019 / 16:00 to 17:00 hrs </td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Room</b></td>
-                <td bgcolor="#E0F196">TBA</td>
+                <td bgcolor="#ffaa5f"><b>Room</b></td>
+                <td bgcolor="#ffdf7a">TBA</td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Chair</b></td>
-                <td bgcolor="#E0F196">TBA</td>
+                <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                <td bgcolor="#ffdf7a">TBA</td>
               </tr>
             </table>
 
@@ -527,9 +527,9 @@
             </table>
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
               <tr>
-                <td width="16%" bgcolor="#40FF00"></td>
-                <td width="16%" bgcolor="#40FF00"><b>16:00 to 16:30</b></td>
-                <td width="79%" bgcolor="#40FF00"><b>Keynote on Cyber Security </b><br><a class="url" href="#"></a></td>
+                <td width="16%" bgcolor="#F6CEF5"></td>
+                <td width="16%" bgcolor="#F6CEF5"><b>16:00 to 16:30</b></td>
+                <td width="79%" bgcolor="#F6CEF5"><b>Keynote on Cyber Security </b><br><a class="url" href="#"></a></td>
               </tr>
 
               <tr>
@@ -540,24 +540,24 @@
             </table>
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
               <tr>
-                <td width="16%" bgcolor="#B4C85E"><b>Session:</b></td>
-                <td width="79%" bgcolor="#E0F196">Panel on Industry and Startups</td>
+                <td width="16%" bgcolor="#ffaa5f"><b>Session:</b></td>
+                <td width="79%" bgcolor="#ffdf7a">Panel on Industry and Startups</td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Date / Time</b></td>
-                <td bgcolor="#E0F196">Saturday &#8211; October 19, 2019 / 17:00 to 18:00 hrs </td>
+                <td bgcolor="#ffaa5f"><b>Date / Time</b></td>
+                <td bgcolor="#ffdf7a">Saturday &#8211; October 19, 2019 / 17:00 to 18:00 hrs </td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Room</b></td>
-                <td bgcolor="#E0F196">TBA</td>
+                <td bgcolor="#ffaa5f"><b>Room</b></td>
+                <td bgcolor="#ffdf7a">TBA</td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Moderator</b></td>
-                <td bgcolor="#E0F196">Sarada Jayakrishnan, <i>DGM Terumo Penpol</i></td>
+                <td bgcolor="#ffaa5f"><b>Moderator</b></td>
+                <td bgcolor="#ffdf7a">Sarada Jayakrishnan, <i>DGM Terumo Penpol</i></td>
               </tr>
               <tr>
-                <td bgcolor="#B4C85E"><b>Chair</b></td>
-                <td bgcolor="#E0F196">TBA</td>
+                <td bgcolor="#ffaa5f"><b>Chair</b></td>
+                <td bgcolor="#ffdf7a">TBA</td>
               </tr>
             </table>
             <table class="table" cellspacing="2" cellpadding="2" width="95%">
