--- a/accommodation.html
+++ b/accommodation.html
@@ -221,6 +221,8 @@
 
          <section class="services-style-one">
              <div class="container">
+                 <div class="row">
+                     <div class="col-md-10">
                  <div class="sec-title text-left">
                      <h2>Accommodation</h2><br>
 
@@ -245,10 +247,8 @@
                              offered by the Hotels/ Travel operators.</font>
                      </p> <br>
 
-                     <p>To book accommodation, Airport Pickup/drop, Tour packages, please visit: <a
-                             href=" https://gitc.travel/tencon-2019/">
-                             <font color="blue">https://gitc.travel/tencon-2019/</font>
-                         </a></p><br>
+                     <p>To book accommodation, Airport Pickup/drop, Tour packages, please visit: <a class="url"
+                             href=" https://gitc.travel/tencon-2019/">https://gitc.travel/tencon-2019/</a></p><br>
 
 
                      <table width="100%" cellpadding="15">
@@ -505,9 +505,7 @@
 
                      <br>
 
-                     email: <a href="mailto: holidays@gitctour.com">
-                         <font color="blue">holidays@gitctour.com</font>
-                     </a><br>
+                     email: <a class="url" href="mailto: holidays@gitctour.com">holidays@gitctour.com</a><br>
 
                      <p>Points of Contact :<br>
                          Amirtha Padmakar - Executive Tours - 9995800732 <br>
@@ -516,7 +514,8 @@
 
                  </div>
 
-
+                </div>
+                </div>
 
 
              </div>
